--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,7 +1,7 @@
 .home_wrapper {
   background-color: var(--primary-dark);
-  padding: 30px 0;
-  height: 550px;
+  padding: 50px 0;
+  height: 600px;
   border-radius: 0 0 100px 100px;
   display: flex;
 }
@@ -9,6 +9,7 @@
 .content {
   display: flex;
   flex-direction: column;
+  justify-content: center;
 }
 .content h1 {
   color: var(--pure);
@@ -43,7 +44,7 @@
 }
 
 .creativity {
-  height: 600px;
+  height: 620px;
   width: 900px;
   display: flex;
   align-items: center;
