adding some styles

--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -3,7 +3,6 @@
   padding: 50px 0;
   height: 600px;
   border-radius: 0 0 100px 100px;
-  display: flex;
 }
 
 .content {
@@ -50,6 +49,7 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  overflow: hidden;
 }
 
 .creativity img {
