--- a/src/pages/Music/Music.module.css
+++ b/src/pages/Music/Music.module.css
@@ -68,6 +68,7 @@
   justify-content: center;
   padding: 10px;
   margin-left: 50px;
+  cursor: pointer;
 }
 
 .search_bar input {
@@ -128,4 +129,8 @@
   100% {
     transform: translateX(0);
   }
+}
+
+.palysong {
+  margin-top: 30px;
 }
